syncthing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: ghcr.io/linuxserver/syncthing:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: web-ui
              containerPort: 8384
            - name: syncthing-tcp
              containerPort: 22000
              protocol: TCP
            - name: syncthing-udp
              containerPort: 22000
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              subPath: Sync
              name: data
          livenessProbe:
            tcpSocket:
              port: web-ui
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: web-ui
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: data
          persistentVolumeClaim:
            claimName: media-share
