syncthing/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-ui
  labels:
    app.kubernetes.io/name: syncthing
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: web-ui
  selector:
    app.kubernetes.io/name: syncthing
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-lb
  labels:
    app.kubernetes.io/name: syncthing
  annotations:
    kube-vip.io/loadbalancerIPs: 10.1.1.48
spec:
  ports:
    - name: syncthing-tcp
      port: 22000
      targetPort: syncthing-tcp
      nodePort: 30174
      protocol: TCP
    - name: syncthing-udp
      port: 22000
      targetPort: syncthing-udp
      nodePort: 30174
      protocol: UDP
  selector:
    app.kubernetes.io/name: syncthing
  type: LoadBalancer
