syncthing/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db3000.xmple.io`) && PathPrefix(`/syncthing/`)
      kind: Rule
      services:
        - name: syncthing-ui
          port: 80
      middlewares:
        - name: syncthing-stripprefix
  tls:
    secretName: db3000-tls
    options:
      name: mintls13

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: syncthing-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /syncthing
